assets/css/_sass/_layouts/_blog-post.scss
/* Blog Post */

// Metadata //

.post__metadata {
	margin: 0 auto;
	margin-top: 1.5rem;
	padding: 0 8.33%;
	max-width: calc(900px + 8.33vw);
}

.post-meta__back {
	margin-top: 2rem;
	margin-right: 1rem;
	padding: 1px 8px;
	font-family: $futura-bold;
	font-size: 20px;
	text-transform: uppercase;
	color: white;
	background-color: black;
	border: 1px solid black;
	transition: color .3s background-color .3s;
	white-space: nowrap;
	&:hover, &:focus {
		color: black;
		background-color: white;
	}
}

.post-meta__title {
	margin: .25em auto;
	font-size: 3rem;
	font-family: $futura-bold;
	color: black;
	border-bottom-width: 0px;
	text-transform: none;
}

.post-meta__date {
	margin-top: 0;
	font-family: $source-sans;
	font-weight: 400;
	font-size: 20px;
	color: $mypurple;
}

.post-meta__tags {

}

.post-meta__tag {

}

// Main content //

.post__content {
	margin: 0 auto;
	margin-bottom: 1.5rem;
	padding: 0 8.33%;
	max-width: calc(900px + 8.33vw);
	font-family: $source-sans;
	font-size: 20px;
	p {
		font-size: 20px;
		line-height: 1.4;
	}
}

